# viral-carousel-maker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: claude-image-provider-setup.md  claude-openai-api-key-setup.md  gallery.md  human-review-rubric.md  image-provider-fallback.md  larrybrain-credit-and-data-policy.md  lennox-fwed-blackboard-style.md  openai-image-fallback.md  public-quickstart.md  threadify-draft-intake.md  threadify-staging.md
examples/: critic-pass.json
examples/intake/: threadify-draft.json  threadify-draft.md
examples/specs/: ai-framework.yaml  career-cta.yaml  coaching-story.yaml  design-examples.yaml  education-quote.yaml  finance-list.yaml  fitness-mistakes.yaml  local-business-debate.yaml  marketing-map.yaml  productivity-timeline.yaml  saas-data.yaml  threadify-intake-seed.yaml  threads-growth-fix-weak-posts-upgrade.yaml  threads-hook-scroll-stop-sample.yaml  threads-identity-challenge.yaml  threads-myth-truth.yaml  threads-photo-anchor.yaml  threads-proof-grid.yaml  threads-shock-stat.yaml  threads-soft-cta.yaml  wellness-recap.yaml
schemas/: carousel.schema.json
scripts/: check_project.py  install.sh  public_proof.py  render_skills.py
src/viral_carousel_maker/: __init__.py  assets.py  browser_renderer.py  cli.py  corpus.py  critic.py  design.py  intake.py  interview.py  models.py  profile.py  (+7 more)
tests/: test_assets.py  test_doctor.py  test_intake.py  test_interview.py  test_performance.py  test_profile.py  test_renderer.py  test_skill_render.py  test_spec_validation.py  test_virality.py
(+26 files in other folders)
